# rappi_agent

./: .env.example  .gitignore  GEMINI.md  README.md  main.py  mlflow.db  pyproject.toml
docs/: consigna.docx  data_dictionary.md  technical_specifications.md
notebooks/: exploratory_data_analysis.ipynb
scripts/: verify_agent_chain.py
src/: anomaly_detector.py  data_loader.py  report_generator.py
src/agents/: __init__.py  shared_state.py
src/agents/analyst/: agent.py  prompt.py  tools.py
src/agents/orchestrator/: agent.py  prompt.py
src/agents/report/: agent.py  prompt.py
src/agents/root/: agent.py  prompt.py
src/agents/suggestion/: agent.py  prompt.py  tools.py
src/agents/visualizer/: agent.py  prompt.py  tools.py
tests/: conftest.py
tests/integration/: test_data_to_analyst.py  test_sequential_workflow.py  test_visualizer_to_dashboard.py
tests/unit/: test_analyst_tools.py  test_data_loader.py  test_main_utils.py  test_shared_state.py  test_suggestion_tools.py  test_visualizer_tools.py
