[project]
name = "rappi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=4.1.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-chat>=0.3.0",
    "google-adk>=1.31.0",
    "jinja2>=3.1.6",
    "litellm>=1.83.0",
    "markdown>=3.10.2",
    "mlflow>=2.0.0",
    "openpyxl>=3.1.5",
    "pandas<3.0.0",
    "plotly>=6.7.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.11",
]
